# grpc-kotlin

./: .gitignore  MODULE.bazel  grpc_kotlin_maven_install.json  maven_install.json
compiler/src/main/java/io/grpc/kotlin/generator/: BUILD.bazel
compiler/src/main/java/io/grpc/kotlin/generator/protoc/: BUILD.bazel
compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/graph/: BUILD.bazel
examples/gradle/: libs.versions.toml
gradle/: libs.versions.toml
