load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "protoc",
    srcs = glob(["*.kt"]),
    deps = [
        "//compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/graph",
        artifact("com.google.guava:guava"),
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_squareup_kotlinpoet",
    ],
)
